--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="icon" href="./favicon/favicon-16x16.png">
     <link rel="stylesheet" href="./css/style.css">
+    <script defer src=".js/script.js"></script>
     <title>Pokedex</title>
 </head>
 <body>
